# TBS-Image-Processing-and-Control

./: .gitignore  Dockerfile.base  Dockerfile.upper  README.md  entrypoint.sh
image_processing/: CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.upper  README.md  entrypoint.sh  package.xml  setup.cfg  setup.py
image_processing/image_processing/: image_display_node.py  image_processor_node.py  image_save_node.py  img_processor_node.py  mask_display_node.py  ranger_control_demo.py  utils.py  zed_depth_test.py
image_processing/launch/: display_images.launch  object_detect_with_pose_assess.launch  object_detection.launch  object_detection.launch.py  object_detection_and_control.launch.py  object_detection_lite.launch.py  obstacle_avoidance.launch  save_images.launch
image_processing/msg/: MaskArray.msg  MaskData.msg
image_processing/scripts/: DBSCAN_test.py  depth_000010.tiff  image_processor_node.py  img_display_node.py  img_processor_node.py  img_save_node.py  mask_display_node.py  obstacle_avoidance.py  process_helper.py  utils.py
img_processor/: CMakeLists.txt  README.md  package.xml
img_processor/launch/: WMM_image_nodes.launch  img_processor_launch.launch
img_processor/msg/: MaskArray.msg  MaskData.msg
img_processor/scripts/: img_display.py  img_display_node.py  img_processor_node.py  img_save_node.py  mask_display.py  mask_display_node.py  process_helper.py
kinect_pub/: CMakeLists.txt  README.md  package.xml
kinect_pub/msg/: RegistrationData.msg
kinect_pub/src/: kinect_publisher_node.cpp
kinect_pub/srv/: GetCameraInfo.srv
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/launch/: WMM_image_nodes.launch  img_processor.launch  object_detect_with_pose_assess.launch  object_detection.launch
object_detection/msg/: MaskArray.msg
object_detection/scripts/: img_processor_node.py  img_save_node.py  mask_display_node.py  process_helper.py
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/scripts/: obstacle_avoidance.py
pose_assess/: CMakeLists.txt  package.xml
pose_assess/scripts/: assess_pose_node.py
pose_assessment/: CMakeLists.txt  README.md  package.xml
pose_assessment/launch/: pose_assessment.launch  usb_camera_out.launch
pose_assessment/scripts/: assess_pose_3d_node.py  assess_pose_node.py
process_msgs/: CMakeLists.txt  README.md  package.xml
process_msgs/msg/: MaskArray.msg  MaskData.msg
wmm_control/: CMakeLists.txt  README.md  package.xml
wmm_control/include/wmm_control/: HelperFunctions.h
wmm_control/launch/: robot_startup.launch  test_control.launch  test_pointer.launch
wmm_control/src/: ControlHelper.cpp  MainController.cpp  Pointer.cpp  Test_base.cpp  Test_base_image_processing.cpp  WaveArm.cpp
wmm_navigation/include/local_planner/: local_planner.h
wmm_sim/: CMakeLists.txt  package.xml
wmm_sim/config/: controller.yaml
wmm_sim/launch/: display.launch  gazebo.launch
wmm_sim/sdf/: wmm.sdf
wmm_sim/src/: teleop_wasd.py
wmm_sim/urdf/: wmm.urdf
wmm_tf/: CMakeLists.txt  package.xml
wmm_tf/launch/: start_demo.launch
wmm_tf/nodes/: dynamic_tf2_broadcaster.py  fixed_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
