<?xml version="1.0"?>
<package format="3">
  <name>image_processing</name>
  <version>0.1.0</version>
  <description>Processes depth, rgb, and ir images taken from ROS topics</description>
  <maintainer email="wmm@todo.todo">wmm</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>ament_python</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>process_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <member_of_group>ros2</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
