<?xml version="1.0"?>
<package format="2">
  <name>wmm_control</name>
  <version>1.0.0</version>
  <description>Control WMM</description>

  <maintainer email="andor@ualberta.ca">Andor Siegers</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kortex_driver</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>kortex_driver</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
